# TF_IDF_app

backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_04_05_0031-d7b3c2a433da_create_table_files.py
backend/config/: config.py  database.py  log.py
backend/src/api/: files.py
backend/src/database/: models.py
backend/src/schemas/: files.py
backend/src/services/: files.py
backend/src/utils/: utils.py
